more javolution removed